force-app/main/default/objects/BGR_Part_Number__c/fields/ASSYLOCATION__c.field-meta.xml
<CustomField>
    <fullName>ASSYLOCATION__c</fullName>
    <label>ASSYLOCATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>