force-app/main/default/objects/BGR_Part_Number__c/fields/GORIFC__c.field-meta.xml
<CustomField>
    <fullName>GORIFC__c</fullName>
    <label>GORIFC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>