force-app/main/default/objects/BGR_Part_Number__c/fields/Orifice_Setting__c.field-meta.xml
<CustomField>
    <fullName>Orifice_Setting__c</fullName>
    <label>Orifice Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>