force-app/main/default/objects/BGR_Part_Number__c/fields/Part_Number_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Sequence__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Part Number Sequence</label>
    <type>AutoNumber</type>
</CustomField>