force-app/main/default/objects/BGR_Part_Number__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>PartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>