force-app/main/default/objects/BGR_Part_Number__c/fields/PartRevision__c.field-meta.xml
<CustomField>
    <fullName>PartRevision__c</fullName>
    <label>PartRevision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>