force-app/main/default/objects/BGR_Part_Number__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipName>Part_Number</relationshipName>
    <type>Lookup</type>
</CustomField>