force-app/main/default/objects/BGR_Part_Number__c/fields/RTPRS1__c.field-meta.xml
<CustomField>
    <fullName>RTPRS1__c</fullName>
    <label>RTPRS1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>