force-app/main/default/objects/BGR_Part_Number__c/fields/RTPRSU__c.field-meta.xml
<CustomField>
    <fullName>RTPRSU__c</fullName>
    <label>RTPRSU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>