force-app/main/default/objects/BGR_Part_Number__c/fields/SHLTSTMETHACT__c.field-meta.xml
<CustomField>
    <fullName>SHLTSTMETHACT__c</fullName>
    <label>SHLTSTMETHACT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>