force-app/main/default/objects/BGR_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PartNumber__c</columns>
    <columns>PartRevision__c</columns>
    <columns>SERVICE__c</columns>
    <columns>RTPRS1__c</columns>
    <columns>RTPRSU__c</columns>
    <columns>ATEX__c</columns>
    <columns>CUTR__c</columns>
    <columns>CSA__c</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>